Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,11 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('data.sqlite')\n",
+    "cur = conn.cursor()"
    ]
   },
   {
@@ -59,8 +63,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Julie', 'Firrelli'), ('Steve', 'Patterson')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cur.execute('''SELECT e.firstName, e.lastName \n",
+    "            FROM employees e\n",
+    "            JOIN offices o\n",
+    "            USING (officeCode)\n",
+    "            WHERE o.city = 'Boston';\n",
+    "            ''').fetchall()"
    ]
   },
   {
@@ -72,11 +100,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1056</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1076</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1143</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1166</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1188</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1216</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1286</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1323</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1102</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1370</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1401</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1702</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>Chiyoda-Ku</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>Chiyoda-Ku</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1088</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1611</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1612</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1619</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1501</td>\n",
+       "      <td>London</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1504</td>\n",
+       "      <td>London</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0              1           2\n",
+       "0   1002  San Francisco          CA\n",
+       "1   1056  San Francisco          CA\n",
+       "2   1076  San Francisco          CA\n",
+       "3   1143  San Francisco          CA\n",
+       "4   1165  San Francisco          CA\n",
+       "5   1166  San Francisco          CA\n",
+       "6   1188         Boston          MA\n",
+       "7   1216         Boston          MA\n",
+       "8   1286            NYC          NY\n",
+       "9   1323            NYC          NY\n",
+       "10  1102          Paris            \n",
+       "11  1337          Paris            \n",
+       "12  1370          Paris            \n",
+       "13  1401          Paris            \n",
+       "14  1702          Paris            \n",
+       "15  1621          Tokyo  Chiyoda-Ku\n",
+       "16  1625          Tokyo  Chiyoda-Ku\n",
+       "17  1088         Sydney            \n",
+       "18  1611         Sydney            \n",
+       "19  1612         Sydney            \n",
+       "20  1619         Sydney            \n",
+       "21  1501         London            \n",
+       "22  1504         London            "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "result = cur.execute('''\n",
+    "            SELECT employees.employeeNumber, offices.city, offices.state \n",
+    "            FROM offices\n",
+    "            LEFT OUTER JOIN employees\n",
+    "            USING (officeCode)\n",
+    "            ''').fetchall()\n",
+    "pd.DataFrame(list(result)) "
    ]
   },
   {
@@ -185,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
